--- a/sense.concordia.java.deepclone.tests/.classpath
+++ b/sense.concordia.java.deepclone.tests/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src">
+	<classpathentry kind="src" path="test cases">
 		<attributes>
 			<attribute name="test" value="true"/>
 		</attributes>
