--- a/sense.concordia.java.deepclone.core/pom.xml
+++ b/sense.concordia.java.deepclone.core/pom.xml
@@ -10,5 +10,15 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>sense.concordia.java.deepclone.core</artifactId>
-	<packaging>jar</packaging>
+	<packaging>eclipse-plugin</packaging>
+
+	<!-- https://mvnrepository.com/artifact/org.eclipse.jdt/org.eclipse.jdt.core -->
+	<dependencies>
+	<dependency>
+    	<groupId>org.eclipse.jdt</groupId>
+    	<artifactId>org.eclipse.jdt.core</artifactId>
+    	<version>3.27.0</version>
+	</dependency>
+	</dependencies>
+
 </project>
