--- a/sense.concordia.java.deepclone.ui/pom.xml
+++ b/sense.concordia.java.deepclone.ui/pom.xml
@@ -10,6 +10,6 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>sense.concordia.java.deepclone.ui</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 </project>
