--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ cache:
     apt: true
     directories:
         - $HOME/.m2
+env:
+  - GTK=3.24
 script: mvn clean verify
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - "export GTK_VERSION=$(pkg-config --modversion gtk+-3.20 | tr . _| cut -d '_' -f 1-2)"
