--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: java
 jdk: oraclejdk17
 dist: trusty
@@ -6,9 +5,12 @@ cache:
     apt: true
     directories:
         - $HOME/.m2
-env:
-  - GTK=3.24
 script: mvn clean verify
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - sudo add-apt-repository ppa:gnome3-team/gnome3-staging
+  - sudo add-apt-repository ppa:gnome3-team/gnome3
+  - sudo apt update
+  - sudo apt dist-upgrade
+  - sudo apt-get install -y libgtk-3-dev libwebkitgtk-3.0-0 gir1.2-webkit2-4.0
