--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 jdk: oraclejdk17
 dist: focal
+services:
+  - xvfb
 cache:
     apt: true
     directories:
@@ -8,4 +10,3 @@ cache:
 script: mvn clean verify
 before_install:
   - "export DISPLAY=:99.0"
-  - sh -e /etc/init.d/xvfb start
